--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,3 +2,10 @@
   text-align: center;
   color: #fff;
 }
+
+.App-header {
+  margin: 0 30px;
+  padding: 2px;
+  text-align: left;
+  text-transform: uppercase;
+}
