--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+html {
+  height: 100%;
+  background-image: linear-gradient(rgb(4, 10, 5), rgb(47, 105, 57) 85%);
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: #111;
+  background-image: linear-gradient(rgb(4, 10, 5), rgb(47, 105, 57) 85%);
+  width: 100%;
+  min-height: 100%;
 }
