filter search by name impl + css improvements

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,8 +4,8 @@
 }
 
 .App-header {
-  margin: 0 30px;
+  margin: 0 30px 30px;
+  border-bottom: thin solid #fff;
   padding: 2px;
-  text-align: left;
   text-transform: uppercase;
 }
