--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,11 @@
 .App {
   text-align: center;
   color: #fff;
+  margin-bottom: 80px;
 }
 
 .App-header {
-  margin: 0 30px 30px;
+  margin: 0 30px 10px;
   border-bottom: thin solid #fff;
   padding: 2px;
   text-transform: uppercase;
