--- a/src/components/Authorize/Authorize.css
+++ b/src/components/Authorize/Authorize.css
@@ -5,7 +5,7 @@
 
 .Authorize-button {
     cursor: pointer;
-    font-size: 18px;
+    font-size: 1.1em;
     font-weight: 700;
     border: none;
     width: 100%;
@@ -14,5 +14,5 @@
     text-transform: uppercase;
     letter-spacing: 3px;
     background: #fff;
-    margin-top: 3em;
+    margin-top: 2em;
 }
