--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,6 +1,12 @@
 .Filter {
     display: flex;
     margin: 0 30px;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
+}
+
+@media all and (max-width: 736px) {
+    .Filter {
+        flex-wrap: wrap;
+    }
 }
