--- a/src/components/Form/Input/Input.css
+++ b/src/components/Form/Input/Input.css
@@ -1,5 +1,6 @@
 .Input {
     margin: 5px 10px;
+    width: 100%;
 }
 
 .Input-field {
@@ -13,4 +14,6 @@
     margin: 0;
     padding: 0 8px;
     width: 100%;
+    font-size: 1em;
+    font-weight: bold;
 }
