--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,9 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  max-width: 1690px; 
   font-family: sans-serif;
   background-image: linear-gradient(rgb(4, 10, 5), rgb(47, 105, 57) 85%);
   width: 100%;
